# OpenGL-Template

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
